Fix spacing paragraph headings

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,7 @@ a:visited {
 .heading-tertiary-paragraph {
   line-height: 1.4;
   color: #444;
-  font-size: 3.8rem;
+  font-size: 3.7rem;
   font-weight: 500;
 }
 
